--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Desafios/d005/index.html
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Desafios/d005/index.html
@@ -10,15 +10,12 @@
     <h1>Minhas Redes Sociais</h1>
     <h2>Quem sou eu?</h2>
     <img src="imagem/foto.png" alt="Emilly Soares Moitinho">
-    <p>Meu nome é <strong>Emilly Soares Moitinho</strong>, sou estudante de Análise e Desenvolvimento de Sistemas <br> da faculdade Centro Universitário ENIAC e estou decicando meu tempo e esforço nos estudos <br> sobre programação. Meu objetivo é me tornar uma Desenvolvedora Front-End. <br> E por isso, estou nesse curso estudando sobre HTMl5 e CSS3.</p>
+    <p>Meu nome é <strong>Emilly Soares Moitinho</strong>, sou estudante de Análise e Desenvolvimento de Sistemas <br> da faculdade Centro Universitário ENIAC e estou decicando meu tempo e esforço nos estudos <br> sobre programação. Meu objetivo é me tornar uma Desenvolvedora Front-End. <br> E por isso, estou nesse curso estudando sobre HTML5 e CSS3.</p>
 
     <h2>Como falar comigo?</h2>
     <ul>
         <li><img src="imagem/icons/icone-github.png" alt="GitHub">/<a href="https://github.com/Emillymoitinho"target="_blank" rel="external">millysmoitinho </a>- Acessa meu repositório no GitHub</li>
-        <li><img src="imagem/icons/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/milly.moitinho/" target="_blank" rel="external">/millymoitinho </a>- Me segue lá no instagram</li>
         <li><img src="imagem/icons/icone-linkedin.png" alt="Linkedin">/<a href="https://www.linkedin.com/in/emilly-soares-moitinho/" target="_blank" rel="external">EmillySoares</a> - Me adiciona lá no Linkedin</li>
-        <li><img src="imagem/icons/icone-twitter.png" alt="Twitter"><a href="https://twitter.com/milly_moitinho"target="_blank" rel="external">/millymoitinho </a>- Me sgue lá no Twitter</li>
-        <li><img src="imagem/icons/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/millymoitinho/" target="_blank" rel="external">/EmillySoares </a>- Me adiciona lá no Facebook</li>
     </ul>
 </body>
 </html>
