--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex018/font01.html
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex018/font01.html
@@ -8,6 +8,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
         @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+        @font-face {
+        font-family: 'Love';
+        src: url('fonts/love larry.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+        }
         
 
         body{
@@ -17,8 +24,9 @@
         }
 
         h1 {
-            font-family: "Kaushan Script", cursive;
+            font-family: "Love", cursive;
             font-size: 3em;
+            font-weight: normal;
         }
 
         h2 {
