--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex023/tabela001.html
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex023/tabela001.html
@@ -7,7 +7,6 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-image: url('imagens/fundo.avif');
             background-repeat: no-repeat;
             background-size: cover;
             height: 100vh;
@@ -15,7 +14,7 @@
 
          h1 {
             text-align: center;
-            color: #FFFFFF;
+            color: pink;
             font-size: 50px;
         }
 
