add fixed header

--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex023/tabela002.html
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex023/tabela002.html
@@ -22,6 +22,7 @@
             width: 500px;
             margin: auto;
             box-shadow: 0 0 20px white;
+            position: relative;
         }
 
         caption {
@@ -46,6 +47,12 @@
         
         td.num {
             text-align: right;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: 0;
+            background-color: deeppink;
         }
 
         tbody > tr:nth-child(odd) { /* 2n-1 */
@@ -200,6 +207,37 @@
             </tfoot>
             
         </table>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quas ut sint omnis quod! Cupiditate ratione hic amet qui dolorum numquam, iure eligendi quibusdam quas voluptate rem illum quia omnis!
+        Architecto asperiores, dolore molestias mollitia minus illum incidunt beatae, a quod corporis veniam doloribus eos minima voluptate voluptatum quas, nisi assumenda commodi consectetur rem aliquam reprehenderit ratione at! Nulla, maiores?
+        Expedita atque perferendis vitae sed reprehenderit alias quam iure incidunt error? Molestias ipsam laboriosam, quam doloribus rem suscipit nam fuga tempora sunt qui iure distinctio. Ea iure eaque adipisci deleniti.
+        Totam eos ducimus alias natus consequuntur porro animi corrupti rerum accusamus iusto doloremque itaque id sed consequatur, modi possimus dolorum molestiae perferendis odio ipsum, eligendi dolore amet nam! Maxime, unde!
+        Id quaerat asperiores assumenda sint? Quasi deleniti atque facere accusamus eius assumenda quisquam nostrum quis numquam placeat corporis expedita odio perspiciatis cum animi necessitatibus eaque cupiditate ab nesciunt, dolore accusantium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quas ut sint omnis quod! Cupiditate ratione hic amet qui dolorum numquam, iure eligendi quibusdam quas voluptate rem illum quia omnis!
+        Architecto asperiores, dolore molestias mollitia minus illum incidunt beatae, a quod corporis veniam doloribus eos minima voluptate voluptatum quas, nisi assumenda commodi consectetur rem aliquam reprehenderit ratione at! Nulla, maiores?
+        Expedita atque perferendis vitae sed reprehenderit alias quam iure incidunt error? Molestias ipsam laboriosam, quam doloribus rem suscipit nam fuga tempora sunt qui iure distinctio. Ea iure eaque adipisci deleniti.
+        Totam eos ducimus alias natus consequuntur porro animi corrupti rerum accusamus iusto doloremque itaque id sed consequatur, modi possimus dolorum molestiae perferendis odio ipsum, eligendi dolore amet nam! Maxime, unde!
+        Id quaerat asperiores assumenda sint? Quasi deleniti atque facere accusamus eius assumenda quisquam nostrum quis numquam placeat corporis expedita odio perspiciatis cum animi necessitatibus eaque cupiditate ab nesciunt, dolore accusantium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quas ut sint omnis quod! Cupiditate ratione hic amet qui dolorum numquam, iure eligendi quibusdam quas voluptate rem illum quia omnis!
+        Architecto asperiores, dolore molestias mollitia minus illum incidunt beatae, a quod corporis veniam doloribus eos minima voluptate voluptatum quas, nisi assumenda commodi consectetur rem aliquam reprehenderit ratione at! Nulla, maiores?
+        Expedita atque perferendis vitae sed reprehenderit alias quam iure incidunt error? Molestias ipsam laboriosam, quam doloribus rem suscipit nam fuga tempora sunt qui iure distinctio. Ea iure eaque adipisci deleniti.
+        Totam eos ducimus alias natus consequuntur porro animi corrupti rerum accusamus iusto doloremque itaque id sed consequatur, modi possimus dolorum molestiae perferendis odio ipsum, eligendi dolore amet nam! Maxime, unde!
+        Id quaerat asperiores assumenda sint? Quasi deleniti atque facere accusamus eius assumenda quisquam nostrum quis numquam placeat corporis expedita odio perspiciatis cum animi necessitatibus eaque cupiditate ab nesciunt, dolore accusantium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quas ut sint omnis quod! Cupiditate ratione hic amet qui dolorum numquam, iure eligendi quibusdam quas voluptate rem illum quia omnis!
+        Architecto asperiores, dolore molestias mollitia minus illum incidunt beatae, a quod corporis veniam doloribus eos minima voluptate voluptatum quas, nisi assumenda commodi consectetur rem aliquam reprehenderit ratione at! Nulla, maiores?
+        Expedita atque perferendis vitae sed reprehenderit alias quam iure incidunt error? Molestias ipsam laboriosam, quam doloribus rem suscipit nam fuga tempora sunt qui iure distinctio. Ea iure eaque adipisci deleniti.
+        Totam eos ducimus alias natus consequuntur porro animi corrupti rerum accusamus iusto doloremque itaque id sed consequatur, modi possimus dolorum molestiae perferendis odio ipsum, eligendi dolore amet nam! Maxime, unde!
+        Id quaerat asperiores assumenda sint? Quasi deleniti atque facere accusamus eius assumenda quisquam nostrum quis numquam placeat corporis expedita odio perspiciatis cum animi necessitatibus eaque cupiditate ab nesciunt, dolore accusantium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quas ut sint omnis quod! Cupiditate ratione hic amet qui dolorum numquam, iure eligendi quibusdam quas voluptate rem illum quia omnis!
+        Architecto asperiores, dolore molestias mollitia minus illum incidunt beatae, a quod corporis veniam doloribus eos minima voluptate voluptatum quas, nisi assumenda commodi consectetur rem aliquam reprehenderit ratione at! Nulla, maiores?
+        Expedita atque perferendis vitae sed reprehenderit alias quam iure incidunt error? Molestias ipsam laboriosam, quam doloribus rem suscipit nam fuga tempora sunt qui iure distinctio. Ea iure eaque adipisci deleniti.
+        Totam eos ducimus alias natus consequuntur porro animi corrupti rerum accusamus iusto doloremque itaque id sed consequatur, modi possimus dolorum molestiae perferendis odio ipsum, eligendi dolore amet nam! Maxime, unde!
+        Id quaerat asperiores assumenda sint? Quasi deleniti atque facere accusamus eius assumenda quisquam nostrum quis numquam placeat corporis expedita odio perspiciatis cum animi necessitatibus eaque cupiditate ab nesciunt, dolore accusantium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quas ut sint omnis quod! Cupiditate ratione hic amet qui dolorum numquam, iure eligendi quibusdam quas voluptate rem illum quia omnis!
+        Architecto asperiores, dolore molestias mollitia minus illum incidunt beatae, a quod corporis veniam doloribus eos minima voluptate voluptatum quas, nisi assumenda commodi consectetur rem aliquam reprehenderit ratione at! Nulla, maiores?
+        Expedita atque perferendis vitae sed reprehenderit alias quam iure incidunt error? Molestias ipsam laboriosam, quam doloribus rem suscipit nam fuga tempora sunt qui iure distinctio. Ea iure eaque adipisci deleniti.
+        Totam eos ducimus alias natus consequuntur porro animi corrupti rerum accusamus iusto doloremque itaque id sed consequatur, modi possimus dolorum molestiae perferendis odio ipsum, eligendi dolore amet nam! Maxime, unde!
+        Id quaerat asperiores assumenda sint? Quasi deleniti atque facere accusamus eius assumenda quisquam nostrum quis numquam placeat corporis expedita odio perspiciatis cum animi necessitatibus eaque cupiditate ab nesciunt, dolore accusantium.</p>
 </body>
 </html>
 
