--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex023/tabela004.html
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex023/tabela004.html
@@ -31,9 +31,9 @@
         <thead>
 
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
                 
             </tr>
 
@@ -41,7 +41,7 @@
 
         <tbody>
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -60,7 +60,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
@@ -79,6 +79,13 @@
                 <td>Toy Story</td>
             </tr>
         </tbody>
+
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <th>100</th>
+            </tr>
+        </tfoot>
 
     </table>
 </body>
