--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex024/iframe003.html
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Exercícios/ex024/iframe003.html
@@ -31,7 +31,8 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eligendi suscipit laboriosam optio minus officia libero earum blanditiis! Eum distinctio voluptatem quia eius beatae magnam corrupti nesciunt. Placeat, quo facilis?
     Neque, ipsam! Natus quo suscipit voluptatem at minima eos cumque doloribus atque eaque mollitia inventore, a magni nostrum nemo quod aspernatur modi consectetur dolorem voluptatum quos. Dolores consequuntur exercitationem vero?</p>
 
-    <iframe src="" id="tela" name="frame">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolore quisquam officia ut amet optio nam illo ex eligendi, recusandae dolorum earum, minima tempore, perspiciatis libero sit! Repellendus, ipsa quibusdam.</p> <img src='img/logo.png'>">
+
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
